--- a/index.html
+++ b/index.html
@@ -2,35 +2,47 @@
 <html>
 	<head>
 		<title>Tobias Koopmann</title>
-		<meta charset="iso8859-1">
+		<meta charset="utf-8">
 		<!-- css -->
         <link rel="stylesheet" href="css/style.css" type="text/css">
     </head>
 	
-    <body onload="init()">
-		<header id="header">
-			<h1>Willkommen auf meiner Seite</h1>
-		</header>
+    <body> 		
+		<!-- templates -->
+		<script type="text/template" id="app_template">
+			Geht net ...
+		</script>
+		
+		<script type="text/template" id="header_template">
+			<div id="header">
+				<h1>Willkommen auf meiner Seite</h1>
+				<div id="clock" class="clock">Here should be the clock. </div>		
+			</div>
+		</script>
 
-		<nav id="nav"> 	
-			<div id="clock" class="clock">Here should be the clock. </div>
-			<h2>Navigation:</h2>
-			<u1>
-				<a href="http://tobias-koopmann.de/owncloud/index.php"> my ownCloud </a>
-			</u1>
-		</nav>
+		<script type="text/template" id="header_template">
+			<div id="nav"> 	
+				<div id="clock" class="clock">Here should be the clock. </div>
+				<h2>Navigation:</h2>
+				<u1>
+					<a href="http://tobias-koopmann.de/owncloud/index.php"> my ownCloud </a>
+				</u1>
+			</div>
+		</script>
 		
-	    <section id="section">
-			<h3> Festekalender </h3>
-			<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;height=800&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ilcojmkh1c528kurqj8ue9rlhk%40group.calendar.google.com&amp;color=%230F4B38&amp;src=de.german%23holiday%40group.v.calendar.google.com&amp;color=%232F6309&amp;src=e_2_de%23weeknum%40group.v.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FBerlin"
-				style=" border:solid 1px #777 " width="800" height="800" frameborder="0" scrolling="no"></iframe>
-		</section>
-		
+		<script type="text/template" id="calender_template">
+			<div id="content">
+				<h3> Festekalender </h3>
+				<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;height=800&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=ilcojmkh1c528kurqj8ue9rlhk%40group.calendar.google.com&amp;color=%230F4B38&amp;src=de.german%23holiday%40group.v.calendar.google.com&amp;color=%232F6309&amp;src=e_2_de%23weeknum%40group.v.calendar.google.com&amp;color=%232952A3&amp;ctz=Europe%2FBerlin"
+					style=" border:solid 1px #777 " width="800" height="800" frameborder="0" scrolling="no"></iframe>
+			</div>
+		</script>
+				
 		<!-- libs -->
 		<script src="js/jquery-1.11.1.js"></script>
 		<script src="js/underscore.js"></script>
 		<script src="js/backbone-min.js"></script>
 		<!-- js -->
-		<script src='js/main.js'></script>
+		<script src='js/views/applicationView.js'></script>
     </body>
 </html>
